force-app/main/default/objects/Resident_Invoice__c/Resident_Invoice__c.object-meta.xml
<CustomObject>
    <label>Resident Invoice</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Resident Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resident Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>