force-app/main/default/objects/Resident_Invoice__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Resident Invoices</relationshipLabel>
    <relationshipName>Resident_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>