force-app/main/default/objects/Resident_Invoice__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resident Invoices</relationshipLabel>
    <relationshipName>Resident_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>